# programming-assignment-0-ybao9

./: README.md  pyproject.toml
collatz/: collatz.py  test_collatz.py
palindromes/: palindromes.py  test_palindromes.py
plants/: plants.py  test_plants.py
stripes/: stripes.py  test_stripes.py
