[project]
name = "pa0"
version = "0.1.0"
description = "MPCS 51042 PA 0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.3.3",
    "rich>=14.1.0",
    "ruff>=0.6.4",
]

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors - handles basic Python style
  "W", # pycodestyle warnings - handles whitespace issues
  "F", # pyflakes - handles unused imports and variables
  "N", # pep8-naming - handles naming conventions
]
ignore = [
  "F401", # allow unused imports (useful for assignments)
  "N818",
]
